# accio

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_ZH.md  vcpkg.json
debian/: README  accio.bash-completion  changelog  control  copyright
src/: CMakeLists.txt  auth.html  config.hpp.in  core.cpp  core.hpp  index.html  indexHtml.hpp.in  main.cpp  upload.html
src/utils/: file.cpp  file.hpp  network.cpp  network.hpp  string.cpp  string.hpp
